@@ -8,7 +8,8 @@ SETTINGS {
 	# set default language
 	LANG = "C"
 	# target files 
-	TARGET = ("Makefile.sample.pmk","config_sample.h.pmk","subdir/Makefile.subdir.pmk")
+	TARGET = ("Makefile.sample.pmk","config_sample.h.pmk",
+			"subdir/Makefile.subdir.pmk")
 	# detect compiler
 	DETECT = ("CC")
 	#DETECT = ("CC","CXX")
