@@ -1,3 +1,7 @@
+25 Jul 2004 mipsator
+ * improved configuration header processing in autoconf support.
+
+
 # snapshot 0.8.1-s2
 
 18 Jul 2004 mipsator
